# spes_autonomy

./: .dockerignore  .gitignore  README.md  spes.repos  spesbot.repos
config/: odrive_config.py  odrive_test.py
cuda/: Dockerfile.jetson  README.md  object_tracker  test_receiver.py  tracker.yaml
cuda/object_tracker/: .gitignore  Dockerfile  README.md  object_tracker  object_tracker.py  test_receiver.py  tracker.yaml
docker/: Dockerfile  Dockerfile.deploy  Dockerfile.pc  Dockerfile.sbc  Makefile  README.md  bashrc  cyclonedds.xml  ros_entrypoint.sh
docker/assets/: map.pgm  map.yaml
firmware/arm/: README.md  arm.ino
scripts/: .gitignore  apriltag_detector.py  docker_start.py  get_camera_param.py  install.sh  spes_daemon  spes_daemon.service  train_detector.py
scripts/templates/: index.html
spes_behavior/: CMakeLists.txt  README.md  package.xml
spes_behavior/behaviors/: behaviors.btproj  test_behaviors.xml  test_nodes.xml
spes_behavior/include/spes_behavior/: battery_state.hpp  bt_topic_sub_node.hpp  detect_obstacles.hpp  image_x_yaw_regulator_action.hpp  is_battery_charged.hpp  is_object_detected.hpp  is_path_clear.hpp  is_weed_detected.hpp  joint.hpp  move_action.hpp  move_stream.hpp  move_stream_action.hpp
spes_behavior/src/: behavior.cpp  spes_behavior_tree.cpp
spes_move/: CMakeLists.txt  README.md  package.xml
spes_move/include/spes_move/: move.hpp
spes_move/scripts/: README.md  apriltag.py  apriltag_detector.py  image_x_yaw_regulator
spes_move/src/: move.cpp  move_node.cpp
spes_msgs/: CMakeLists.txt  package.xml
spes_msgs/action/: BehaviourCommand.action  ImageXYawRegulate.action  Move.action  Regulate.action
spes_msgs/msg/: MoveCommand.msg  MoveState.msg
spes_tests/: CMakeLists.txt  package.xml
spes_tests/launch/: test_image_x_yaw_regulator_launch.py  test_move_apriltag_launch.py  test_move_latency_compensation_launch.py  test_move_marker_launch.py  test_move_obstacle.py  test_move_obstacle_launch.py  test_move_stream_launch.py  test_x_yaw_regulator_launch.py
spes_tests/resource/: apriltag.yaml  map.pgm
spes_tests/scripts/: test_move_latency_compensation
spesbot_bringup/: package.xml  setup.cfg  setup.py
spesbot_description/: CMakeLists.txt  README.md  package.xml
spesbot_description/launch/: cartesian_launch.py  display_launch.py
spesbot_description/resource/: cartesian_demo.rviz
spesbot_description/urdf/: arm.urdf  arm.xacro  mobile_base.xacro  spesbot.xacro
spesbot_description/urdf/meshes/: arm_link_1.stl  arm_link_2.stl  arm_link_4.stl  caster_holder.stl  caster_wheel.stl  mobile_base.stl  wheel.stl
spesbot_driver/: package.xml  setup.cfg  setup.py
spesbot_driver/launch/: driver_launch.py
spesbot_driver/resource/: ros2_control.urdf  ros2_control.yaml
spesbot_hardware/: CMakeLists.txt  package.xml  serial_hardware_interface.xml  setup.cfg  setup.py
spesbot_hardware/include/spesbot_hardware/: serial_hardware_interface.hpp
spesbot_hardware/launch/: hardware_launch.py
spesbot_hardware/odrive/: odrive_config.py
spesbot_hardware/resource/: controllers.yaml  description.urdf  ros2_control.urdf  ros2_control.yaml
spesbot_hardware/src/: serial_hardware_interface.cpp
spesbot_isaac/: CMakeLists.txt  package.xml
spesbot_isaac/config/: controllers.yaml  spesbot_control.yaml
spesbot_isaac/data/: spesbot.usda
spesbot_isaac/launch/: isaac.launch.py  isaac_launch.py
spesbot_isaac/scripts/: navsatfix2tf.py  tf2navsatfix.py
spesbot_webots/: CMakeLists.txt  README.md  package.xml
spesbot_webots/data/protos/: Cake.proto  SpesBot.proto  StaticObjects.proto
spesbot_webots/data/worlds/: .eurobot.wbproj  .gitignore  .sample.wbproj  .spesbot.wbproj  .spesbot_world.wbproj  .test_latency_compensation.wbproj  eurobot.wbt  sample.wbt  spesbot.wbt  test_latency_compensation.wbt
spesbot_webots/launch/: test_latency_compensation_launch.py  test_visual_controller_launch.py  webots_launch.py
spesbot_webots/resource/: camera.urdf  description.urdf  robot_description.urdf
spesbot_webots/scripts/: ros2virtualcam  test  test_latency_compensation  visual_controller
spesbot_webots/src/: image_subscriber.py
xarm_bringup/: CMakeLists.txt  README.md  augment.py  deactivate.py  package.xml  real_data_collecting.py  save_parquet.py  test.py  xarm_keyboard.py  xarm_manual_control.py
xarm_bringup/isaac/: README.md  banch_clumb.SLDASM  emergency_button.usd  imitation.usda  lite6.usda  object_picking.usda  power_unit.SLDPRT  power_unit.usd  screwdriver.fbx  screwdriver.usd
xarm_bringup/launch/: lite6_cartesian_launch.py  lite6_display_launch.py
xarm_bringup/resource/: controllers.yaml  lite6_cartesian.rviz
xarm_bringup/scripts/: augment  control_object_picking  episode_generator_picking  episode_manager  episode_recorder  keyboard_teleop  lite6_parallel_gripper_controller  real_teleoperation_data  ros2_numpy_tf.py  save_parquet  save_teleoperation_data  sixd_speed_limiter  space_teleop  switcher
xarm_bringup/urdf/: .gitignore  README.md  lite6.ros2_control.xacro  lite6.urdf.xacro  lite6_gripper.xacro
xarm_bringup/urdf/meshes/lite6/: gripper_base.stl  gripper_finger.stl
