<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spes_move</name>
  <version>0.0.0</version>
  <description>Primitive but flexible move behavior for visual navigation and industrial mobile
    robots.</description>
  <maintainer email="contact@spes.ai">Spes Robotics</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>spes_msgs</depend>
  <depend>ruckig</depend>
  <depend>spes_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>