<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spesbot_hardware</name>
  <version>0.0.0</version>
  <description>Hardware integration for Spes Robotics development platform.</description>
  <maintainer email="contact@spes.ai">Spes Robotics</maintainer>
  <license>LGPL-3.0-only</license>

  <depend>ros2_control</depend>
  <depend>hls_lfcd_lds_driver</depend>
  <depend>odrive_ros2_control</depend>
  <depend>v4l2_camera</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
