<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spesbot_webots</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marijagolubovic16@gmail.com">spesbot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  <depend>ros2launch</depend>
  <build_depend>controller_manager</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
